--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/skyyyline.png">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Mandy Tsai - Pre-Business</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Mandy Tsai</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/proffy.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Mandy Tsai
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Mandy Tsai is a first year student at the University of California, Riverside. She graduated from Walnut High School in May of 2019 with a high GPA. During the summer of 2019, she went to study abroad in Taipei, Taiwan at the National Taiwan Normal University to further her bilingual skills in Chinese and received a Certificate of completion in proficient Mandarin Chinese. Upon her entrance to the School of Business at the University of California, Riverside, she intends to enter a concentration in finance. <br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        In high school, she participated in multiple outreach organizations and business clubs that allowed her to strengthen her public speaking skills as well as interpersonal skills. Placing at the section level for Personal Finance and Business Procedures in the section level of Future Business Leaders of America — Phi Beta Lamba, she has attended and competed at the state level leadership conference. As the Vice Chair for the Walnut Youth Advisory Commission, she also worked closely with members of the city council in Walnut to put together city wide events, such as the annual Family Festival (a day-long event at the city park that showcases multiple school clubs and organizations in a parade as well as small mom-and-pop shops around the city) and Family Science Night (an interactive city event held in the senior center that generates revenue and stimulates city-wide pride). During her time as a member of the One World Youth Leader Network Organization, she research women’s education extensively and put together a presentation, which she later presented in front of world politics leaders and significant charity sponsors at the United Nations Headquarters in New York. <br><br>
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/mandy-tsai-198b93178?trk=people-guest_profile-result-card_result-card_full-click">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://0f09d7b66df94148b9ea456b5fe95968.vfs.cloud9.us-east-2.amazonaws.com/_static/LearnCS8-Resume/index.html">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/mandyts44">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:mtsai048@stu.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +90,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Future Business Leaders of America</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Organization</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Participated in competition in section and state level<br> 
+              • Placed at section level for Personal Finance<br>
+              • Attended multiple conferences and has vast experience with networking<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2015 - May 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Vice Chair</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Walnut Youth Advisory Commission</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Worked with Teen Center to organize a city science night at the Senior Center<br>
+              • Headed the committee that organized an anti-bullying day at Teen Center<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2016 - May 2018</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">One World Youth Leader Network Conference</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">United Nations</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Researched education in third world countries extensively to put together powerpoint<br>
+            • Lead a presentation at the United Nations headquarters<br>
+            • Created educational content to help promote women's education in third world countries<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2016 - May 2019</span>
           </div>
         </div>
 
@@ -151,23 +148,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Walnut High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2015 - May 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">National Taiwan Normal University</h3>
+            <div class="subheading mb-3">Certificate in Mandarin</div>
+            <div>Proficient level of Mandarin Chinese</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2019 - August 2019</span>
           </div>
         </div>
 
@@ -175,10 +171,10 @@
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Finance</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2019 - Present</span>
           </div>
         </div>
 
@@ -191,7 +187,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/porfolio1pi.png" width="500px">
+            <img src="img/Pie Chart.jpg" width="500px"> <br>
+            <img src="img/IMG-2107.JPG" width="500px"> <br>
+            <img src="img/kwkwkw.png" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +198,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Mandy Tsai</center><br>
 
 
   </div>
